# sharemoti3

./: .gitignore  package-lock.json
api/: api.py  const_test.ipynb  pixiv_test.ipynb  pyproject.toml  test.ipynb
api/option/: holo_lewd_flair_texts.csv  holo_member_name.csv  holo_names.csv  holo_wiki_urls.yaml  ssbu_category.csv  ssbu_names.csv
api/src/database/: hololewd.db  main_share.db
api/src/route/: haikuList_route.py  holoarchive_route.py  hololewd_route.py  holomovie_route.py  holosong_route.py  holotwitter_route.py  imageList_route.py  karaokeList_route.py  movieList_route.py  movie_route.py  nameList2_route.py  nameList_route.py  pixiv_route.py  radioList_route.py  rembg_route.py  route_base.py  schoolList_route.py  schoollist2_route.py  ssbuList_route.py  ssbu_clip_route.py  ssbu_clip_toukei_route.py  top_image_route.py  top_news_route.py  twitter_route.py  voiceList_route.py  wordList_route.py  word_collection_route.py  yakiList_route.py
api/src/route/service/: create_table_service.py  haikulist_service.py  holoarchive_service.py  hololewd_service.py  holosong_service.py  holotwitter_service.py  imagelist_service.py  karaokelist_service.py  movie_service.py  movielist_service.py  namelist2_service.py  namelist_service.py  pixiv_service.py  radiolist_service.py  schoollist2_service.py  schoollist_service.py  ssbu_clip_service.py  ssbu_clip_toukei_service.py  (+8 more)
api/src/scheduler/: scheduler_holo_archive.py  scheduler_hololewd.py  scheduler_holotwitter.py  scheduler_movie_thumbnail_update.py  scheduler_pixiv.py  scheduler_ssbu_clip.py  scheduler_twitter.py
(+190 files in other folders)
